deployment/kubs/infrastructure/hasura/hasura.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasura
spec:
  selector:
    app: hasura
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
