deployment/kubs/infrastructure/hasura/hasura.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hasura-ingress
spec:
  rules:
    - host: hasura.${HOST}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hasura
                port:
                  number: 8080
